# BodyShapeGPT

./: .gitignore  demo.py  fetch_smpl.sh  gui.py  load_smpl.py  measurement.py  pyproject.toml  requirements.txt  train.py
config/: body_shape_config.yaml  dataset_config.yaml  vocab_config.yaml
docs/: BodyShapeGPT_Documentation.md  diff.md
scripts/: body_shape_analysis.ipynb  generate_body_shape_dataset.py  generate_dataset.py  gui.py  gui_v2.py  gui_v3.py  gui_v4.py  inference.py  keyword_beta_pivot.csv  keyword_beta_ranges.csv  keyword_beta_weights.csv  keyword_beta_weights_normalized.csv  keyword_primary_beta.csv  test_v2.py  test_v3.py  test_v3_1.py  train.py  train_v2.py  train_v3.py  train_v4.py  verify_body_shapes.py
